--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,13 +6,52 @@
     <div class="container mt-5">
         <h1 class="text-center mb-3">Accueil</h1>
 
+        <div class="d-flex justify-content-center align-items-center flex-column gap-4 w-100">
+
         {% if posts is empty %}
             <div class="alert alert-info" role="alert">
-                Aucun post disponible.
+                Aucun post disponible. 
             </div>
         {% else %}
             {% for post in posts %}
-                <div class="card mb-3">
+                <div class="card" style="width: 35rem;">
+                    <div class="card-header d-flex justify-content-between">
+                        <a href="{{ path('app_compte_show', {'id': post.compte.id}) }}" class="text-decoration-none text-dark">
+                            <div class="d-flex gap-2 align-items-center">
+                                {% if post.compte.photoId %}
+                                    {% for profil in allPhotoProfils %}
+                                        {% if profil.photoProfil and profil.id == post.compte.id %}
+                                            <img src="data:image/{{ profil.formatPhotoProfil }};base64,{{ profil.photoProfil }}" alt="Photo de profil" width="30" height="30" class="rounded-circle border border-dark">
+                                        {% endif %}
+                                    {% endfor %}
+                                {% else %}
+                                    <div class="rounded-circle bg-secondary" style="width: 30px; height: 30px;"></div>
+                                {% endif %}
+                                <h6 class="font-weight-light d-flex align-items-center">@{{ post.compte.username }}</h6>
+                            </div>
+                        </a>
+                        
+                        <div class="dropdown">
+                            {{ post.post.datePublication|date('Y-m-d H:i:s') }}
+                            <a class="btn btn-sm" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-solid fa-ellipsis-v"></i>
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href=""><i class="fa-solid fa-flag"></i> Signaler</a></li>
+                                {% if app.user.id == post.compte.id %}
+                                <li><a class="dropdown-item" href="{{ path('app_post_edit', {'id' : post.post.id }) }}"><i class="fa-solid fa-pen-to-square"></i> Modifier</a></li>
+                                <li>
+                                    <form method="post" action="{{ path('app_post_delete', {'id': post.post.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.post.id) }}">
+                                        <button class="dropdown-item"><i class="fa-solid fa-trash"></i> Supprimer</button>
+                                    </form>
+                                </li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                    </div>
+
                     {% if post.photos is not empty %}
                         <div class="card-body">
                             {% for photo in post.photos %}
@@ -57,6 +96,8 @@
                 </div>
             {% endfor %}
         {% endif %}
+
+        </div>
     </div>
 {% endblock %}
 
@@ -82,7 +123,9 @@ $(document).ready(() => {
                 $(`#add-input-commentaire-${id}`).val('');
 
                 // Met à jour la liste des commentaires
-                let commentaires = response.commentaires;
+                let commentaires = JSON.parse(response.commentaires);
+
+                console.log(response);
 
                 // On vide la div
                 $(`#liste-commentaires-${id}`).empty();
@@ -90,9 +133,15 @@ $(document).ready(() => {
                 // On ajoute les commentaires
                 commentaires.forEach(commentaire => {
                     $(`#liste-commentaires-${id}`).append(`
-                        <div class="d-flex justify-content-between align-items-center">
-                            <p>${commentaire.date}</p>
-                            <p>${commentaire.commentaire}</p>
+                        <div class="d-flex justify-content-between align-items-center w-100 border-bottom gap-2">
+                            <div class="d-flex align-items-start justify-content-center flex-column ">
+                                <p class="fw-bold">@${commentaire.username}</p>
+                                <p>${commentaire.commentaire}</p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center gap-2">
+                                <p class="h-100">${commentaire.date}</p>
+                                <a href="" class="delete-commentaire" data-id="${commentaire.id}"><i class="fa-solid fa-trash"></i></a>
+                            </div>
                         </div>
                     `);
                 });
