--- a/templates/home/search.html.twig
+++ b/templates/home/search.html.twig
@@ -67,9 +67,42 @@
                                     '>@{{ etablissement.getNom() }}</h5>
                                 </div>
                             </a>
+
+                            <div>
+                                {% if etablissement.isSubscribed %}
+                                    <a href='{{ path('app_etablissement_unsubscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-danger'>Se désabonner</a>
+                                {% else %}
+                                    <a href='{{ path('app_etablissement_subscribe', {'id': compte.getId()}) }}' class='btn btn-sm btn-dark'>S'abonner</a>
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
                 </div>
+        {% endfor %}
+
+        {% if hashtags is not empty %}
+            <h2 class="w-100 mt-2">Hashtags : </h2>
+        {% endif %}
+        {% for hashtag in hashtags %}
+            <div class='card w-100 mt-2'>
+                <div class='card-body'>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="{{ path('app_hashtag_show', {'id': hashtag.getId()}) }}" class="text-decoration-none text-dark">
+                            <div class="d-flex gap-3 align-items-center">
+                                <h5 class='card-title text-dark'>#{{ hashtag.getTexte() }}</h5>
+                            </div>
+                        </a>
+
+                        <div>
+                            {% if hashtag.isSubscribed %}
+                                <a href='{{ path('app_hashtag_unsubscribe', {'id': hashtag.getId()}) }}' class='btn btn-sm btn-danger'>Se désabonner</a>
+                            {% else %}
+                                <a href='{{ path('app_hashtag_subscribe', {'id': hashtag.getId()}) }}' class='btn btn-sm btn-dark'>S'abonner</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
 
         </div>
