--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -9,6 +9,6 @@
 
         {{ include('post/_form.html.twig') }}
 
-        <a href="{{ path('app_post_index') }}" class="btn btn-secondary">Retour</a>
+        <a class="btn btn-secondary" href="{{ referer }}">Retour</a>
     </div>
 {% endblock %}
