--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="text-center mb-3">Accueil</h1>
 
         <div class="w-100 d-flex justify-content-center align-items-start gap-4">
             <div class="d-flex justify-content-center align-items-center flex-column gap-4 w-75 border-end me-4">
@@ -39,17 +38,47 @@
                                 </a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href=""><i class="fa-solid fa-flag"></i> Signaler</a></li>
+                                    {% if app.user.id != post.compte.id %}
+                                        <!-- Button trigger modal -->
+                                        <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                            <i class="fa-solid fa-flag"></i> Signaler
+                                        </button>
+
+                                    {% endif %}
                                     {% if app.user.id == post.compte.id %}
-                                    <li><a class="dropdown-item" href="{{ path('app_post_edit', {'id' : post.post.id }) }}"><i class="fa-solid fa-pen-to-square"></i> Modifier</a></li>
-                                    <li>
-                                        <form method="post" action="{{ path('app_post_delete', {'id': post.post.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.post.id) }}">
-                                            <button class="dropdown-item"><i class="fa-solid fa-trash"></i> Supprimer</button>
-                                        </form>
-                                    </li>
+                                        <li><a class="dropdown-item" href="{{ path('app_post_edit', {'id' : post.post.id }) }}"><i class="fa-solid fa-pen-to-square"></i> Modifier</a></li>
+                                        <li>
+                                            <form method="post" action="{{ path('app_post_delete', {'id': post.post.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.post.id) }}">
+                                                <button class="dropdown-item"><i class="fa-solid fa-trash"></i> Supprimer</button>
+                                            </form>
+                                        </li>
                                     {% endif %}
                                 </ul>
+                            </div>
+                        </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Signaler le post</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <form action="{{ path('app_post_signaler', {'id': post.post.id}) }}">
+                                        <div class="modal-body">
+                                                <div class="mb-3">
+                                                    <label for="exampleFormControlInput1" class="form-label">Raison du Signalement</label>
+                                                    <textarea name="reportArea" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Écrivez ici..."></textarea>
+                                                </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                                            <button type="submit" class="btn btn-danger">Signaler</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
 
@@ -102,11 +131,14 @@
 
             <div class="d-flex justify-content-center align-items-start flex-column gap-2">
 
-                <h2>Hashtags</h2>
+                <h2>Tendances</h2>
 
                 {% if hashtags is not empty %}
                     {% for has in hashtags %}
-                        <a href="{{ path('app_hashtag_show', {'id': has.id}) }}" class="text-decoration-none">#{{ has.texte }}</a>
+                        <a href="{{ path('app_hashtag_show', {'id': has.id}) }}" class="text-decoration-none d-flex flex-column align-items-start">
+                            #{{ has.texte }}
+                            <span class="text-secondary">{{ has.nb_posts }} {{ has.nb_posts > 1 ? "Posts" : "Post" }}</span>
+                        </a>
                     {% endfor %}
                 {% else %}
                     <div class="alert alert-dark" role="alert">
