--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -7,6 +7,6 @@
         <h1>Modifier un Post</h1>
 
         {{ include('post/_form.html.twig', {'button_label': 'Modifier'}) }}
-        <a class="btn btn-danger" href="{{ path('app_compte_show', {'id': app.user.id}) }}">Retour</a>
+        <a class="btn btn-danger" href="{{ referer }}">Retour</a>
     </div>
 {% endblock %}
