--- a/templates/etablissement/show.html.twig
+++ b/templates/etablissement/show.html.twig
@@ -36,10 +36,6 @@
                         {% else %}
                             <a href="{{ path('app_etablissement_subscribe', {'id': etablissement.id}) }}" class="btn btn-sm btn-primary">S'abonner</a>
                         {% endif %}
-                        
-                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <i class="fa-solid fa-flag"></i>
-                        </button>
 
                     </div>
 
@@ -51,31 +47,135 @@
 
                 </div>
 
-                {# <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Signaler le compte</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <form action="{{ path('app_compte_signaler', {'id': compte.id}) }}">
-                        <div class="modal-body">
-                                <div class="mb-3">
-                                    <label for="exampleFormControlInput1" class="form-label">Raison du Signalement</label>
-                                    <textarea name="reportArea" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Écrivez ici..."></textarea>
-                                </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-                            <button type="submit" class="btn btn-danger">Signaler</button>
-                        </div>
-                    </form>
-                    </div>
-                </div>
-                </div> #}
-
             </div>
+        </div>
+
+        <hr>
+
+        <div class="d-flex justify-content-center align-items-center flex-column gap-4">
+
+        <h3 class="text-center">Publications</h3>
+
+            {% if posts is empty %}
+                <div class="alert alert-info" role="alert">
+                    Aucun post disponible. 
+                </div>
+            {% else %}
+                {% for post in posts %}
+                    <div class="card" style="width: 35rem;">
+                        <div class="card-header d-flex justify-content-between">
+                            <a href="{{ path('app_compte_show', {'id': post.compte.id}) }}" class="text-decoration-none text-dark">
+                                <div class="d-flex gap-2 align-items-center">
+                                    {% if post.compte.photoId %}
+                                        {% for profil in allPhotoProfils %}
+                                            {% if profil.photoProfil and profil.id == post.compte.id %}
+                                                <img src="data:image/{{ profil.formatPhotoProfil }};base64,{{ profil.photoProfil }}" alt="Photo de profil" width="30" height="30" class="rounded-circle border border-dark">
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% else %}
+                                        <div class="rounded-circle bg-secondary" style="width: 30px; height: 30px;"></div>
+                                    {% endif %}
+                                    <h6 class="font-weight-light d-flex align-items-center">@{{ post.compte.username }}</h6>
+                                </div>
+                            </a>
+                            
+                            <div class="dropdown">
+                                {{ post.post.datePublication|date('Y-m-d H:i:s') }}
+                                <a class="btn btn-sm" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-ellipsis-v"></i>
+                                </a>
+
+                                <ul class="dropdown-menu">
+                                    {% if app.user.id != post.compte.id %}
+                                        <!-- Button trigger modal -->
+                                        <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                            <i class="fa-solid fa-flag"></i> Signaler
+                                        </button>
+                                        
+                                    {% endif %}
+
+                                    {% if app.user.id == post.compte.id %}
+                                        <li><a class="dropdown-item" href="{{ path('app_post_edit', {'id' : post.post.id }) }}"><i class="fa-solid fa-pen-to-square"></i> Modifier</a></li>
+                                        <li>
+                                            <form method="post" action="{{ path('app_post_delete', {'id': post.post.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.post.id) }}">
+                                                <button class="dropdown-item"><i class="fa-solid fa-trash"></i> Supprimer</button>
+                                            </form>
+                                        </li>
+                                    {% endif %}
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Signaler le post</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <form action="{{ path('app_post_signaler', {'id': post.post.id}) }}">
+                                        <div class="modal-body">
+                                                <div class="mb-3">
+                                                    <label for="exampleFormControlInput1" class="form-label">Raison du Signalement</label>
+                                                    <textarea name="reportArea" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Écrivez ici..."></textarea>
+                                                </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                                            <button type="submit" class="btn btn-danger">Signaler</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        {% if post.photos is not empty %}
+                            <div class="card-body">
+                                {% for photo in post.photos %}
+                                    <img src="data:image/{{ photo.format }};base64,{{ photo.donneesPhoto }}" alt="Photo de profil" width="200" height="200" class="ratio ratio-1x1 object-fit-contain">
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+
+                        <div class="card-body">
+                            <h5 class="card-title">{{ post.post.titre }}</h5>
+                            <p class="card-text">{{ post.post.description }}</p>
+                            <p>{{ (post.post.tempsRetard // 60) ~ 'h' }}{{ post.post.tempsRetard % 60 ~ 'min' }} de retard</p>
+                            
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div class="d-flex justify-content-center align-items-center flex-column">
+                                        <button class="btn like-button" data-id="{{ post.post.id }}" data-action-url="{{ path('app_post_like', {'id': post.post.id}) }}"><i class="fa-regular fa-heart"></i></button>
+                                        <button class="btn unlike-button" data-id="{{ post.post.id }}" data-action-url="{{ path('app_post_unlike', {'id': post.post.id}) }}" style="display: none"><i class="fa-solid fa-heart"></i></button>
+                                        <span class="like-count">{{ post.nb_likes }}</span>
+                                    </div>
+                                    <button class="btn btn-danger golden-like-button" data-id="{{ post.post.id }}" data-action-url="{{ path('app_post_golden_like', {'id': post.post.id}) }}"><i class="fa-regular fa-heart"></i></button>
+                                </div>
+
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <span class="btn open-commentaire" data-id="{{ post.post.id }}"><i class="fa-regular fa-comment"></i></span>
+                                </div>
+                            </div>
+
+                            <div id="commentaires-{{ post.post.id }}" style="display: none">
+                                <hr>
+                                <div class="mb-3">
+                                    <div class="input-group">
+                                        <input name="commentaire" type="text" class="form-control" id="add-input-commentaire-{{ post.post.id }}" placeholder="Écrivez ici...">
+                                        <input type="hidden" name="post_id" value="{{ post.post.id }}">
+                                        <button data-id="{{ post.post.id }}" class="btn btn-primary add-commentaire">Commenter</button>
+                                    </div>
+                                </div>
+
+                                <div id="liste-commentaires-{{ post.post.id }}"></div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
+
         </div>
 
     </div>
