--- a/templates/compte/edit.html.twig
+++ b/templates/compte/edit.html.twig
@@ -8,7 +8,7 @@
 
         <h1>Modifier le Compte</h1>
     
-        {{ include('compte/_form.html.twig', {'button_label': 'Modifier'}) }}
+        {{ include('compte/_update_form.html.twig', {'button_label': 'Modifier'}) }}
 
         <div class="d-flex gap-6 mt-3">
         
