--- a/templates/compte/show.html.twig
+++ b/templates/compte/show.html.twig
@@ -136,6 +136,26 @@
                                         </form>
                                     </li>
                                 </ul>
+
+                                <ul class="dropdown-menu">
+                                    {% if app.user.id != compte.id %}
+                                        <!-- Button trigger modal -->
+                                        <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                            <i class="fa-solid fa-flag"></i> Signaler
+                                        </button>
+                                        
+                                    {% endif %}
+
+                                    {% if app.user.id == compte.id %}
+                                        <li><a class="dropdown-item" href="{{ path('app_post_edit', {'id' : p.post.id }) }}"><i class="fa-solid fa-pen-to-square"></i> Modifier</a></li>
+                                        <li>
+                                            <form method="post" action="{{ path('app_post_delete', {'id': p.post.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ p.post.id) }}">
+                                                <button class="dropdown-item"><i class="fa-solid fa-trash"></i> Supprimer</button>
+                                            </form>
+                                        </li>
+                                    {% endif %}
+                                </ul>
                             </div>
                         </div>
                         {% if p.photos is not empty %}
